--- a/index.html
+++ b/index.html
@@ -5,5 +5,89 @@
   </head>
   <body>
     <!-- Write your HTML in this file -->
+
+    <!-- <p>Banh Mi</p>
+    <p>Grilled Cheese</p>
+    <p>Baba Ghanoush</p>
+    <p>Tomato soup</p>
+    <p>Cheese and crackers</p>it would loo
+    <p>Sushi</p>
+
+    <ul>
+      <li>Banh Mi</li>
+      <li>Grilled Cheese</li>
+      <li>Baba Ghanoush</li>
+      <li>Tomato soup</li>
+      <li>Cheese and crackers</li>
+      <li>Sushi</li>
+    </ul>
+
+    <ul>
+      <li>
+        Sandwiches
+        <ul>
+          <li>Banh Mi</li>
+          <li>Grilled Cheese</li>
+        </ul>
+      </li>
+      <li>
+        Snacks
+        <ul>
+          <li>Baba Ghanoush</li>
+          <li>Za’atar Bread</li>
+        </ul>
+      </li>
+      <li>
+        Soups
+        <ul>
+          <li>Tomato soup</li>
+        </ul>
+      </li>
+      <li>
+        Sushi
+        <li>
+          Spicy Sushi
+          <ul>
+            <li>Sashimi</li>
+            <li>Uramaki</li>
+          </ul>
+        </li>
+      </li>
+    </ul> -->
+
+
+    <ul>
+      <li>2 slices of bread</li>
+      <li>
+        4 slices of cheese
+        <ul>
+          <li>cheddar</li>
+          <li>mozzarella</li>
+          <li>pepper jack</li>
+        </ul>
+      </li>
+
+      <li>1 tbsp of butter</li>
+    </ul>
+
+    <h4>The steps to making a basic grilled cheese would be</h4>
+    <ol>
+      <li>Spread butter on bread and frying pan</li>
+      <li>Place bread in frying pan and fry</li>
+      <li>Add cheese on top of bread</li>
+      <li>Cover with second slice of bread</li>
+      <li>Turn over and fry for 2 minutes</li>
+    </ol>
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
